Fixed stuff in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 node_modules
 node_modules
-.cache
-.vscode
+.cache/*
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
